SERVER-66739 Fix wasNeverUsed in conn_pool_stats.js